--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/mCheckImgAndVideoView.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/mCheckImgAndVideoView.xib
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="mCheckImgAndVideoView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E6q-4t-Twp">
-                    <rect key="frame" x="0.0" y="143" width="320" height="282"/>
-                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E6q-4t-Twp"/>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lDw-gA-nHw">
-                    <rect key="frame" x="135" y="447" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="0eK-Q6-9Mu"/>
                         <constraint firstAttribute="width" constant="50" id="Uu4-uY-P8H"/>
                     </constraints>
-                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" backgroundImage="mClose_circle-1">
-                        <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="mCloseAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="ta4-NK-CKh"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.70134698275862073" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.70134698275862073" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="E6q-4t-Twp" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EPB-kG-tz8"/>
                 <constraint firstItem="lDw-gA-nHw" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Z1N-LA-Bmx"/>
@@ -40,7 +38,6 @@
                 <constraint firstItem="E6q-4t-Twp" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="y63-Q7-AqZ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <connections>
                 <outlet property="mCloseBtn" destination="lDw-gA-nHw" id="MTv-kH-LFB"/>
                 <outlet property="mImg" destination="E6q-4t-Twp" id="aop-lf-RcE"/>
@@ -48,6 +45,6 @@
         </view>
     </objects>
     <resources>
-        <image name="mClose_circle-1" width="1024" height="1024"/>
+        <image name="mClose_circle-1" width="512" height="512"/>
     </resources>
 </document>
