--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/mCheckVideoView.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/mCheckVideoView.xib
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="mCheckImgAndVideoView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MG8-4S-ZGz">
-                    <rect key="frame" x="0.0" y="120" width="320" height="300"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="300" id="edR-Rm-58q"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Df1-ke-tgm">
-                    <rect key="frame" x="135" y="450" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Clb-dX-dxD"/>
                         <constraint firstAttribute="width" constant="50" id="ogZ-Fy-veI"/>
                     </constraints>
-                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" backgroundImage="mClose_circle-1">
-                        <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="mCloseAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="MCd-VY-MD4"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.70086206896551728" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.70086206896551728" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="MG8-4S-ZGz" secondAttribute="trailing" id="BSr-xj-7po"/>
                 <constraint firstItem="Df1-ke-tgm" firstAttribute="top" secondItem="MG8-4S-ZGz" secondAttribute="bottom" constant="30" id="U0k-Fn-FCr"/>
@@ -42,7 +41,6 @@
                 <constraint firstItem="Df1-ke-tgm" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="oNy-ao-s5c"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <connections>
                 <outlet property="mCloseBtn" destination="Df1-ke-tgm" id="Ue1-mi-MO3"/>
                 <outlet property="mVideoView" destination="MG8-4S-ZGz" id="fUC-3B-ht4"/>
@@ -50,6 +48,6 @@
         </view>
     </objects>
     <resources>
-        <image name="mClose_circle-1" width="1024" height="1024"/>
+        <image name="mClose_circle-1" width="512" height="512"/>
     </resources>
 </document>
