--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/mMyTableViewCell2.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/mMyTableViewCell2.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,39 +13,35 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="58w-Wi-Rip" id="0nr-Ff-7IZ">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
+                <frame key="frameInset" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_history" translatesAutoresizingMaskIntoConstraints="NO" id="hnG-vb-gki">
-                        <rect key="frame" x="10" y="10" width="25" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="k7U-2U-LsH"/>
                             <constraint firstAttribute="width" constant="25" id="sal-Nz-nAq"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="接单地区" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCC-eY-9dB">
-                        <rect key="frame" x="43" y="14" width="60" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="7Re-aw-TWK"/>
-                            <constraint firstAttribute="width" constant="60" id="Xf7-hC-j1j"/>
+                            <constraint firstAttribute="width" constant="65" id="Xf7-hC-j1j"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="55" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Npy-Q1-IQ4">
-                        <rect key="frame" x="277" y="14" width="20" height="20"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="RG1-ey-HzY"/>
                             <constraint firstAttribute="width" constant="20" id="ihm-2g-KWI"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jiantou1" translatesAutoresizingMaskIntoConstraints="NO" id="Qwl-Kv-Tcx">
-                        <rect key="frame" x="305" y="18" width="7" height="13"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="13" id="Wyi-aJ-5UV"/>
                             <constraint firstAttribute="width" constant="7" id="yYo-6B-dOS"/>
@@ -72,6 +69,6 @@
     </objects>
     <resources>
         <image name="jiantou1" width="15" height="26"/>
-        <image name="my_history" width="29" height="34"/>
+        <image name="my_history" width="14" height="17"/>
     </resources>
 </document>
